app/client/src/scss/elements/TeaserElement.scss
@use "../variables" as *;

section.section--TeaserElement {
    .section_content {
        text-align: center;

        .teaserelement_list {

            .teaseritem {
                background-color: var(--ColorGray);
                display: flex;
                flex-direction: column;
                justify-content: flex-start;
                align-items: center;
                text-align: center;
                padding: 20px;
                border-radius: 20px;
                grid-column: span 4;

                p {
                    margin-bottom: 0px;
                }

                .link--button {
                    margin-top: 20px;
                }

                .teaseritem_image {
                    width: 150px;
                    height: 150px;
                    padding: 0 20px 5px 20px;

                    img {
                        width: 100%;
                        height: 100%;
                        object-fit: contain;
                    }
                }

                .teaseritem_title {
                    padding: 0 10px 5px 10px;
                    margin-bottom: 10px;
                    border-bottom: 2px solid var(--ColorWhite);
                }

                @include media(max-desktop) {
                    grid-column: span 6;
                }

                @include media(max-medium) {
                    grid-column: span 12;
                }
            }

            @include media(max-medium) {
                gap: 20px;
            }
        }
    }
}

